objects/OUV_Booking__c.object
<CustomObject>
    <fields>
        <fullName>OUV_Calc_Auth_Day_Approver__c</fullName>
        <formula>IF(AND(OwnerId &lt;&gt;  LL6_Approver__c,  OR(ISBLANK(Driver_1__c),Driver_1__c &lt;&gt;  LL6_Approver__r.OUV_CDsID__c), OR(ISBLANK(Driver_2__c),Driver_2__c &lt;&gt;  LL6_Approver__r.OUV_CDsID__c), OR(ISBLANK(OUV_DriverUser__c),OUV_DriverUser__c &lt;&gt; LL6_Approver__r.OUV_CDsID__c), NOT(ISBLANK(LL6_Approver__c))), &apos;LL6&apos;, 
       IF(AND(OwnerId &lt;&gt;   OUV_Day_Pass_Approver_Alternative__c ,  OR(ISBLANK(Driver_1__c),Driver_1__c &lt;&gt;  OUV_Day_Pass_Approver_Alternative__r.OUV_CDsID__c), OR(ISBLANK(Driver_2__c),Driver_2__c &lt;&gt;  OUV_Day_Pass_Approver_Alternative__r.OUV_CDsID__c), OR(ISBLANK(  OUV_DriverUser__c),  OUV_DriverUser__c &lt;&gt; OUV_Day_Pass_Approver_Alternative__r.OUV_CDsID__c), NOT(ISBLANK(OUV_Day_Pass_Approver_Alternative__c))),&apos;LL6Alt&apos;,

         IF(AND(OwnerId &lt;&gt;  LL5_Approver__c, OR( ISBLANK( Driver_1__c), Driver_1__c &lt;&gt;  LL5_Approver__r.OUV_CDsID__c), OR(ISBLANK(Driver_2__c),Driver_2__c &lt;&gt;  LL5_Approver__r.OUV_CDsID__c), OR(ISBLANK( OUV_DriverUser__c),  OUV_DriverUser__c &lt;&gt; LL5_Approver__r.OUV_CDsID__c), NOT(ISBLANK(LL5_Approver__c))), &apos;LL5&apos;, 
            IF(AND(OwnerId &lt;&gt;   OUV_Overnight_Pass_Approver_Alternative__c , OR(ISBLANK(Driver_1__c),Driver_1__c &lt;&gt;  OUV_Overnight_Pass_Approver_Alternative__r.OUV_CDsID__c), OR(ISBLANK( Driver_2__c), Driver_2__c &lt;&gt;  OUV_Overnight_Pass_Approver_Alternative__r.OUV_CDsID__c), OR(ISBLANK(OUV_DriverUser__c),OUV_DriverUser__c &lt;&gt; OUV_Overnight_Pass_Approver_Alternative__r.OUV_CDsID__c), NOT(ISBLANK(OUV_Overnight_Pass_Approver_Alternative__c ))),&apos;LL5Alt&apos;,

               IF(AND(OwnerId &lt;&gt;  LL4_Approver__c, OR(ISBLANK(Driver_1__c),Driver_1__c &lt;&gt;  LL4_Approver__r.OUV_CDsID__c), OR(ISBLANK(Driver_2__c),Driver_2__c &lt;&gt;  LL4_Approver__r.OUV_CDsID__c), OR(ISBLANK(OUV_DriverUser__c),OUV_DriverUser__c &lt;&gt; LL4_Approver__r.OUV_CDsID__c), NOT(ISBLANK(LL4_Approver__c))), &apos;LL4&apos;, 
               &apos;LL4Alt&apos;)
            )
         )
       )
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc Auth Day Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_MarketManagingDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(Deprecated) Market Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_BookingShortDescription__c</fullName>
        <inlineHelpText>High Level Description of Vehicle Activity - Do not add any personal details; name, phone number, address etc. and ensure the data you add complies with CP1-011 and your local Privacy Policies.</inlineHelpText>
        <label>Booking Quick Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Loan_Agreement_Language__c</fullName>
        <description>Language in which to generate the VLA</description>
        <label>VLA Email and Instructions Language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_Loan_Agreement_Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>OUV_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Booking_Start_Time_Local__c</fullName>
        <label>Booking Start Time (Local)</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>OUV_Calc_Auth_Weekend_Approver__c</fullName>
        <formula>IF(AND(OwnerId &lt;&gt; LL4_Approver__c, OR(ISBLANK(Driver_1__c),Driver_1__c &lt;&gt; LL4_Approver__r.OUV_CDsID__c), OR(ISBLANK(Driver_2__c),Driver_2__c &lt;&gt; LL4_Approver__r.OUV_CDsID__c), OR(ISBLANK(OUV_DriverUser__c),OUV_DriverUser__c &lt;&gt; LL4_Approver__r.OUV_CDsID__c), NOT(ISBLANK(LL4_Approver__c))), &apos;LL4&apos;, 
&apos;LL4Alt&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc Auth Weekend Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Internal_JLR_Contact_Email__c</fullName>
        <description>Internal JLR Contact Email</description>
        <label>Internal JLR Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OUV_Calc_Auth_Overnight_Approver__c</fullName>
        <formula>IF(AND(OwnerId &lt;&gt; LL5_Approver__c, OR( ISBLANK( Driver_1__c), Driver_1__c &lt;&gt; LL5_Approver__r.OUV_CDsID__c), OR(ISBLANK(Driver_2__c),Driver_2__c &lt;&gt; LL5_Approver__r.OUV_CDsID__c), OR(ISBLANK( OUV_DriverUser__c), OUV_DriverUser__c &lt;&gt; LL5_Approver__r.OUV_CDsID__c), NOT(ISBLANK(LL5_Approver__c))), &apos;LL5&apos;, 
IF(AND(OwnerId &lt;&gt; OUV_Overnight_Pass_Approver_Alternative__c , OR(ISBLANK(Driver_1__c),Driver_1__c &lt;&gt; OUV_Overnight_Pass_Approver_Alternative__r.OUV_CDsID__c), OR(ISBLANK( Driver_2__c), Driver_2__c &lt;&gt; OUV_Overnight_Pass_Approver_Alternative__r.OUV_CDsID__c), OR(ISBLANK(OUV_DriverUser__c),OUV_DriverUser__c &lt;&gt; OUV_Overnight_Pass_Approver_Alternative__r.OUV_CDsID__c), NOT(ISBLANK(OUV_Overnight_Pass_Approver_Alternative__c ))),&apos;LL5Alt&apos;, 

IF(AND(OwnerId &lt;&gt; LL4_Approver__c, OR(ISBLANK(Driver_1__c),Driver_1__c &lt;&gt; LL4_Approver__r.OUV_CDsID__c), OR(ISBLANK(Driver_2__c),Driver_2__c &lt;&gt; LL4_Approver__r.OUV_CDsID__c), OR(ISBLANK(OUV_DriverUser__c),OUV_DriverUser__c &lt;&gt; LL4_Approver__r.OUV_CDsID__c), NOT(ISBLANK(LL4_Approver__c))), &apos;LL4&apos;, 
&apos;LL4Alt&apos;) 
) 
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc Auth Overnight Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_VehicleLoanAgreementPploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VLA Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUV_Day_Pass_Approver_Alternative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Day Pass Approver Alternative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings_LL6Alt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Loan_Agreement_Number__c</fullName>
        <label>VLA Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preparation_Transportation_End_Date__c</fullName>
        <description>Preparation/Transportation End Date from the Preparation/Transportation Reservation related to the Booking.</description>
        <label>Preparation/Transportation End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_containing_the_Auction_Document__c</fullName>
        <formula>$Label.OUV_Auction_Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email containing the Auction Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Weekend_Pass_Approver_Alternative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Weekend Pass Approver Alternative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings_LL4Alt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OUV_ReworkRepairEstimateCompletionDate__c</fullName>
        <label>Re-work/Repair Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Overnight_Pass_Approver_Alternative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overnight Pass Approver Alternative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OUV_Bookings_LL5Alt</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>OUV_Booking_Editable</fullName>
        <active>true</active>
        <description>This is the standard OUV booking record type available to users</description>
        <label>OUV Booking Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUV_Booking_READ_ONLY</fullName>
        <active>true</active>
        <description>This is a read only RT for OUV booking where only the status field is editable by the user</description>
        <label>OUV Booking READ ONLY</label>
    </recordTypes>
    <recordTypes>
        <fullName>OUV_Booking_Editable_Encrypted_Drivers</fullName>
        <active>true</active>
        <description>This is the OUV booking record type available to users when Driver 1 and Driver 2 are encrypted</description>
        <label>OUV Booking Editable Encrypted Drivers</label>
    </recordTypes>
    <sharingReasons>
        <fullName>OUV_Fleet_Members__c</fullName>
        <label>Fleet Members</label>
    </sharingReasons>
    <validationRules>
        <fullName>OUV_BookingOwnerChange</fullName>
        <active>true</active>
        <description>Prevents the changing of the owner field to everyone except the System Administrator</description>
        <errorConditionFormula>AND(
ISCHANGED(OwnerId),
CASE($Profile.Name,
&quot;System Administrator&quot;, 1,
0 ) &lt;&gt; 1,
OUV_ByPassValidation__c	= false
)</errorConditionFormula>
        <errorMessage>You don&apos;t have permission to change the owner field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_VLA_Checkbox_Fields</fullName>
        <active>true</active>
        <description>Turns the fields Loan Agreement Market, Loan Agreement Category and Loan Agreement Language mandatory if &apos;Vehcile Loan Agreement&apos; check box is ticked</description>
        <errorConditionFormula>AND(
NOT( ISCHANGED( OUV_ByPassValidation__c ) ),
OUV_VehicleLoanAgreement__c = TRUE,
OR(
      ISBLANK(TEXT(OUV_Loan_Agreement_Market__c)),
      ISBLANK(TEXT(OUV_LoanCategory__c)),
      ISBLANK(TEXT(OUV_Loan_Agreement_Language__c))
)
)</errorConditionFormula>
        <errorMessage>The fields Loan Agreement Market, Loan Agreement Category and Loan Agreement Language must be filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Block_Auction_Document</fullName>
        <active>true</active>
        <description>Blocks the creation of the Auction Document if the Auction Language is not set up.</description>
        <errorConditionFormula>AND(
OUV_Generate_Auction_Sdoc__c = true, 
ISBLANK(TEXT( OUV_Document_Template__c )))</errorConditionFormula>
        <errorMessage>Please fill the Template field in the Document Template section below</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Verify_sensitive_Field</fullName>
        <active>true</active>
        <description>Internal JLR Contact field should be case sensitive</description>
        <errorConditionFormula>AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),OUV_DriverUser__c &lt;&gt; LOWER(OUV_DriverUser__c ))</errorConditionFormula>
        <errorMessage>Internal JLR Contact should be JLR CDSID in lowercase</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Booking_Driver1_Validation</fullName>
        <active>true</active>
        <description>If VLA Checkbox is not ticked, Driver 1 must be mandatory.</description>
        <errorConditionFormula>AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ), ISBLANK( Driver_1__c ),ISBLANK( OUV_Encrypted_Driver_1__c ), OUV_VehicleLoanAgreement__c = false)</errorConditionFormula>
        <errorMessage>Vehicle Loan Agreement is not ticked. Please fill the Driver 1 field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Verify_Booking_Request_Type</fullName>
        <active>false</active>
        <description>If request type is single booking then user should not be able to book multiple vehicles by creating multiple line items</description>
        <errorConditionFormula>IF( AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),ISPICKVAL(OUV_BookingRequestType__c, &apos;Single Vehicle Booking&apos;)&amp;&amp; No_Of_Vehicles_Reservation__c &gt; 1), true , false)</errorConditionFormula>
        <errorDisplayField>OUV_BookingRequestType__c</errorDisplayField>
        <errorMessage>Cannot book Multiple Vehicles with Single Booking Request Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Cannot_cancel_closed_booking</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL( OUV_BookingApprovalStatus__c , &quot;Cancelled&quot;), 
  ISPICKVAL(PRIORVALUE(OUV_BookingApprovalStatus__c ),&quot;Closed&quot;)
)</errorConditionFormula>
        <errorMessage>You cannot cancel a Closed Booking</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_StartDate_EndDate_Validation</fullName>
        <active>true</active>
        <description>Compare OUV_BookingStartDate__c with OUV_BookingEndDate__c.</description>
        <errorConditionFormula>IF(
AND(OUV_ApprovalProcessActive__c = false, 
AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ), 
OR( OUV_Booking_Start_Time__c &lt; NOW(),OUV_Booking_End_Time__c &lt;  OUV_Booking_Start_Time__c ), 
ISPICKVAL(OUV_BookingApprovalStatus__c, &apos;New&apos;) 
)), 
true,false)</errorConditionFormula>
        <errorMessage>Booking End Date should be greater than Booking Start Date and Booking Start Date should be greater than current time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Mileage_End_Of_Booking_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),OUV_VehicleMileage__c &gt; OUV_MileageEnd__c)</errorConditionFormula>
        <errorMessage>Mileage End Booking can be only equal or greater then the Current Vehicle Mileage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Book_LineiItem_cannot_UpdateDelete</fullName>
        <active>false</active>
        <description>Requester should not  add more Booking Line items for the Booking with Approved status  ( GOP-714)</description>
        <errorConditionFormula>AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),ISCHANGED( No_Of_Vehicles_Reservation__c ) &amp;&amp; No_Of_Vehicles_Reservation__c &gt;  PRIORVALUE(No_Of_Vehicles_Reservation__c) &amp;&amp; ISPICKVAL( OUV_BookingApprovalStatus__c , &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>Booking line items can not be added or deleted once the Booking header has been Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Location_cannot_be_blank_on_Booking</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISCHANGED( OUV_ByPassValidation__c ) ),(ISNULL(OUV_Destination_Location__c)|| (OUV_Destination_Location__c == &apos;&apos;) ),( ISNULL( OUV_OtherLocation__c) || (OUV_OtherLocation__c == &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Please fill either Location or Other Location.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OUV_Approvers_And_Driver_Should_Not_Same</fullName>
        <active>false</active>
        <description>Four eye principle Business rule:
An approver can&apos;t be a driver or a requester – validation Approvers and Driver can’t be the same.</description>
        <errorConditionFormula>IF(OR((OUV_DriverUser__c == OUV_FleetManager__r.OUV_CDsID__c),(OUV_DriverUser__c == OUV_MarketFinanceDirector__r.OUV_CDsID__c),(OUV_DriverUser__c == OUV_MarketManagingDirector__r.OUV_CDsID__c)), true, false)</errorConditionFormula>
        <errorMessage>Warning Message:
Warning as per corporate policy the Approver can not be either the Requester or the Internal JLR Contact of the Vehicle(s).</errorMessage>
    </validationRules>
</CustomObject>